entities.backgrounds: Documentation and other touchups
1. Add missing/improve javadoc.
2. Make variables final where appropriate.