@@ -21,14 +21,21 @@ public class ScrollingImageBackground extends Background {
     private final double screenWidth;
     private final List<ImageView> imageViews;
 
-    public ScrollingImageBackground(Image image, double screenHeight, double screenWidth) {
+    /**
+     * @param image backgound image
+     * @param screenHeight the height of the screen to which the background should be scaled
+     * @param screenWidth  the width of the screen to which the background should be scaled
+     */
+    public ScrollingImageBackground(final Image image,
+                                    final double screenHeight,
+                                    final double screenWidth) {
         // Use Pane as root since we need absolute positioning
         this.root = new Pane();
         setView(root);
         this.image = image;
         this.screenHeight = screenHeight;
         this.screenWidth = screenWidth;
-        this.imageViews = new ArrayList<>();
+        imageViews = new ArrayList<>();
 
         ImageView initialView = createImageView();
         initialView.setLayoutX(0);
@@ -45,10 +52,11 @@ public class ScrollingImageBackground extends Background {
      * 1. Move imageViews left based on velocity and timeDelta.
      * 2. If there is a hole on the right, add a new image to fill that hole.
      * 3. If some imageViews are completely past the left edge, remove them.
+     *
      * @param timeDelta time elapsed since last update, in seconds
      */
     @Override
-    public void update(double timeDelta) {
+    public void update(final double timeDelta) {
         double nextMoveDistance = SLIDE_VELOCITY * timeDelta;
         maybeCreateNewImage(nextMoveDistance);
         updateImagesPosition(nextMoveDistance);
@@ -58,10 +66,11 @@ public class ScrollingImageBackground extends Background {
     /**
      * If moving the last (and therefore rightmost) imageView is going to cause a hole to appear,
      * add a new imageView to fill the hole.
+     *
      * @param nextMoveDistance distance the image will travel this frame
      */
-    private void maybeCreateNewImage(double nextMoveDistance) {
-        ImageView lastImageView = imageViews.get(imageViews.size() - 1);
+    private void maybeCreateNewImage(final double nextMoveDistance) {
+        ImageView lastImageView = imageViews.getLast();
         if (imageEndingThisFrame(lastImageView, nextMoveDistance)) {
             ImageView newImageView = createImageView();
             newImageView.setLayoutX(lastImageView.getBoundsInParent().getMaxX());
@@ -72,23 +81,26 @@ public class ScrollingImageBackground extends Background {
     }
 
     /**
-     * Returns true if imageView's rightmost point will be past right edge, once next move is made.
+     * @param imageView the {@code ImageView}
      * @param nextMoveDistance distance the image will travel this frame
-     * @return
+     * @return true if rightmost point of imageView will be past right edge,
+     * once next move is made.
      */
-    private boolean imageEndingThisFrame(ImageView imageView, double nextMoveDistance) {
+    private boolean imageEndingThisFrame(final ImageView imageView,
+                                         final double nextMoveDistance) {
         double maxX = imageView.getBoundsInParent().getMaxX();
         return (maxX >= screenWidth && (maxX + nextMoveDistance) < screenWidth);
     }
 
     /**
-     * Moves all imageViews by {@param moveDistance}
+     * Moves all imageViews by {@param moveDistance}.
+     *
      * @param moveDistance Distance to move the images by
      */
-    private void updateImagesPosition(double moveDistance) {
+    private void updateImagesPosition(final double moveDistance) {
         imageViews.forEach(imageView ->
                 imageView.setTranslateX(imageView.getTranslateX() + moveDistance)
-                );
+        );
     }
 
     /**
@@ -99,9 +111,10 @@ public class ScrollingImageBackground extends Background {
     }
 
     /**
-     * @return True if rightmost point of imageView is past left edge.
+     * @param imageView the {@code ImageView}
+     * @return true if rightmost point of imageView is past left edge.
      */
-    private boolean isFullyPastLeftEdge(ImageView imageView) {
+    private boolean isFullyPastLeftEdge(final ImageView imageView) {
         double x = imageView.getLayoutX() + imageView.getTranslateX();
         return x < -imageView.getBoundsInParent().getWidth();
     }
